WELD-2701 Changes for JDK 17 execution. Additional Arglines, removal of unused parameters.